# measured-boot

./: go.mod  go.sum  measured-boot.go
extract/: BUILD.bazel  extract.go  extract_test.go
fixtures/: BUILD.bazel
measure/: BUILD.bazel  authentihash_test.go  pcr09.go  pcr11.go  pcr11_test.go
pesection/: BUILD.bazel
