load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "extract",
    srcs = ["extract.go"],
    importpath = "github.com/flashbots/measured-boot/v2/extract",
    visibility = ["//visibility:public"],
    deps = ["//pesection"],
)

go_test(
    name = "extract_test",
    srcs = ["extract_test.go"],
    embed = [":extract"],
    deps = [
        "//fixtures",
        "//pesection",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_goleak//:goleak",
    ],
)
